@@ -1,34 +1,13 @@
 package org.q3s.p2p.client.exec;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.InputStreamReader;
-import java.util.Date;
-
 public class LinuxExecutorBean implements Executor {
 
 	public void open(String fullname) throws InterruptedException {
-		executeCommand("xdg-open " + fullname);
-	}
-	
-	private String executeCommand(String command) {
-		StringBuffer output = new StringBuffer();
-		Process p;
 		try {
-			p = Runtime.getRuntime().exec(command);
-			p.waitFor();
-			BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            String line = "";
-			while ((line = reader.readLine())!= null) {
-				output.append(line + "\n");
-			}
-
+			new ProcessBuilder("xdg-open", fullname).start();
 		} catch (Exception e) {
-			e.printStackTrace();
+			System.err.println("Error opening file: " + e.getMessage());
 		}
-
-		return output.toString();
-
 	}
 
 }
